<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="add">+</string>
    <string name="title">Lista de Compras</string>
    <string name="item_name">Item Name</string>
    <string name="edit_buttom">Edit</string>
    <string name="delete_buttom">Del</string>
    <string name="item_qtd">Item Qtd.</string>
    <string name="item_price">Item Price</string>
    <string name="edit_dialog_name_field">Item</string>
    <string name="edit_dialog_qtd_field">Qtd.</string>
    <string name="edit_dialog_price_field">Price</string>
    <string name="app_title">Lista de Compras</string>
</resources>
